{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 81,
  "lineage": "36533e73-2517-508d-5584-2f821a9f55c5",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "task_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:891377302372:instance/i-010877995845499c0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010877995845499c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0096c2b312c9caafc",
            "private_dns": "ip-10-0-1-241.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.241",
            "public_ip": "44.213.103.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06a23947d9b6c5a26",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026fc998849a00d43",
            "tags": {
              "Name": "task-ec2"
            },
            "tags_all": {
              "Name": "task-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04f70977bae92d304"
            ]
          },
          "dependencies": [
            "module.networking_components.aws_security_group.http_ssh_sg",
            "module.networking_components.aws_subnet.public_subnet",
            "module.networking_components.aws_vpc.vpc",
            "module.ssh-key.aws_key_pair.ssh-key"
          ]
        }
      ]
    },
    {
      "module": "module.networking_components",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377302372:internet-gateway/igw-020041107baa463a1",
            "id": "igw-020041107baa463a1",
            "owner_id": "891377302372",
            "tags": {
              "Name": "task-igw"
            },
            "tags_all": {
              "Name": "task-igw"
            },
            "vpc_id": "vpc-0a0bd240456c4fd81"
          },
          "dependencies": [
            "module.networking_components.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking_components",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377302372:route-table/rtb-08e7f7147f3289d0e",
            "id": "rtb-08e7f7147f3289d0e",
            "owner_id": "891377302372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020041107baa463a1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task-igw-rt"
            },
            "tags_all": {
              "Name": "task-igw-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0bd240456c4fd81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_components.aws_internet_gateway.igw",
            "module.networking_components.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking_components",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040a3528f6814d87a",
            "route_table_id": "rtb-08e7f7147f3289d0e",
            "subnet_id": "subnet-026fc998849a00d43"
          },
          "dependencies": [
            "module.networking_components.aws_internet_gateway.igw",
            "module.networking_components.aws_route_table.igw_rt",
            "module.networking_components.aws_subnet.public_subnet",
            "module.networking_components.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking_components",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377302372:security-group/sg-04f70977bae92d304",
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f70977bae92d304",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "891377302372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http_ssh_sg"
            },
            "tags_all": {
              "Name": "http_ssh_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0bd240456c4fd81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_components.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking_components",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377302372:subnet/subnet-026fc998849a00d43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026fc998849a00d43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377302372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-public-subnet"
            },
            "tags_all": {
              "Name": "task-public-subnet"
            },
            "vpc_id": "vpc-0a0bd240456c4fd81"
          },
          "dependencies": [
            "module.networking_components.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking_components",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377302372:vpc/vpc-0a0bd240456c4fd81",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d7b0a74eb252685a",
            "default_route_table_id": "rtb-0f8f521b9f17d1ae4",
            "default_security_group_id": "sg-087531359b82d1fd8",
            "dhcp_options_id": "dopt-06fb52bd269c9b00c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0bd240456c4fd81",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8f521b9f17d1ae4",
            "owner_id": "891377302372",
            "tags": {
              "Name": "task-vpc"
            },
            "tags_all": {
              "Name": "task-vpc"
            }
          }
        }
      ]
    }
  ]
}